# wt-mapextractor-rust

./: .gitignore  Cargo.toml  README.md  config.sample.json
docs/: BIN_FORMAT.md  BUILD_PIPELINE.md  CDK_KNOWLEDGE.md  HM2_REFERENCE.md  KNOWN_ISSUES.md  ORIENTATION.md  PIPELINE_OVERVIEW.md  README.md
ingame_map/: Cargo.toml  README.md
ingame_map/src/: main.rs
src/: cli.rs  config.rs  dxp_index.rs  export.rs  extract.rs  heightmap.rs  index.html  inspect.rs  landclass.rs  main.rs  missions.rs  paint.rs  pipeline.rs  post.rs  progress.rs  rendinst.rs  server.rs  util.rs  viewer.html
src/web/: coords.js  earth-globe.js  gizmo.js  height-scale.js  helpers.js  hover.js  index-app.js  intro-anim.js  minimap.js  mission-overlay.js  scene-setup.js  state.js  terrain-init.js  tool-events.js  ui.js  viewer-app.js  webgpu-los.js
src/web/tools/: los.js  rendinst-style.js  ruler.js
