[package]
name = "wt-map-extractor"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "wt-map-extractor"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tiny_http = "0.12"
flate2 = "1.1"
image = { version = "0.25", default-features = true }
image_dds = { version = "0.7", default-features = false, features = ["ddsfile", "image"] }
libloading = "0.8"
tempfile = "3.20"
zstd = "0.13"
lzma-rs = "0.3"
rayon = "1.10"
webbrowser = "1.0"

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
strip = true
panic = "abort"
